Adding VSCode default settings extension to be used instead of userSettings option.

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
-  font-weight: 700;
-  font-family: 'Iosevka Nerd Font', sans-serif;
+  font-weight: 500;
+  font-family: 'Input Sans Compressed', 'Iosevka Nerd Font', sans-serif;
   font-size: 13px;
 }
 
