Changing fonts to Input Sans and Mono.

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
   font-weight: 500;
-  font-family: 'Input Sans Compressed', 'Iosevka Nerd Font', sans-serif;
+  font-family: 'Input Sans Condensed', sans-serif;
   font-size: 13px;
 }
 
