--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -73,6 +73,13 @@
   padding: 0 12px;
 }
 
+#custom-browser,
+#custom-terminal,
+#custom-files,
+#custom-editor {
+  font-family: 'Iosevka Nerd Font', sans-serif;
+}
+
 #idle_inhibitor {
   padding: 0 18px;
 }
