--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,220 +1,1 @@
-/**
- * Catpuccin theme ported to Waybar.
- *
- * Author:      Daniel Nordstrom
- * Repository:  https://github.com/dnordstrom/dotfiles
- * Website:     https://mrnordstrom.com
- * Palette:     https://github.com/catppuccin
- *
- * Widget tree documentation:
- * https://github.com/Alexays/Waybar/wiki/Styling#viewing-the-widget-tree
- *
- * CSS subset documentation:
- * https://docs.gtk.org/gtk3/css-overview.html
- */
-
-/**
- * COLOR PALETTE
- */
-
-@define-color flamingo  #F2CECF;
-@define-color magenta   #C6AAE8;
-@define-color pink      #E5B4E2;
-@define-color red       #E38C8F;
-@define-color peach     #F9C096;
-@define-color yellow    #EBDDAA;
-@define-color green     #B1E3AD;
-@define-color blue      #A4B9EF;
-@define-color teal      #BEE4ED;
-
-@define-color black0    #15121C;
-@define-color black1    #1B1923;
-@define-color black2    #1E1E28;
-@define-color black3    #332E41;
-@define-color black4    #575268;
-
-@define-color gray0     #6E6C7E;
-@define-color gray1     #988BA2;
-@define-color gray2     #C3BAC6;
-
-@define-color white     #DADAE8;
-
-/**
- * CONTAINER
- */
-
-* {
-  font-weight: bold;
-  font-family: "InputMonoCompressed Nerd Font", monospace;
-  font-size: 12px;
-}
-
-/* Outer container */
-#waybar {
-  background: transparent;
-  color: @black2;
-}
-
-/* Inner container */
-#waybar:first-child > box {
-  background: transparent;
-  margin: 10px 10px 0 10px;
-}
-
-/**
- * DEFAULT MODULE STYLES
- */
-
-#mode,
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#tray,
-#idle_inhibitor,
-#custom-media,
-#custom-keyboard,
-#custom-disks,
-#custom-wttr,
-#custom-darksky,
-#custom-system,
-#custom-separator,
-#custom-files,
-#custom-browser,
-#custom-mail,
-#custom-tmpmail,
-#custom-editor,
-#custom-terminal {
-  background: @black2;
-  color: @white;
-  padding: 0px 14px 1px;
-}
-
-/**
- * LEFT
- */
-
-#workspaces {
-  background: @black2;
-  margin: 0;
-  padding: 0;
-}
-
-#workspaces button {
-  margin: 0;
-  padding: 0 10px;
-  color: @gray2;
-  border-top: 4px solid transparent;
-  border-bottom: 3px solid @black2;
-  border-right: none;
-  border-left: none;
-  border-radius: 0;
-}
-
-#workspaces button:hover,
-#workspaces button.urgent:hover {
-  background: @black3;
-  border-bottom: 3px solid @peach;
-  color: @peach;
-  transition: none;
-}
-
-#workspaces button:first-child {
-  border-radius: 0;
-}
-
-#workspaces button.focused {
-  background: @black3;
-  border-bottom: 3px solid @blue;
-  color: @blue;
-}
-
-#workspaces button.urgent {
-  background: @red;
-  border-bottom: 3px solid @red;
-  color: @black2;
-}
-
-#window {
-  background: @black3;
-  color: @gray2;
-}
-
-window#waybar:not(.empty) #window {
-  padding: 0 10px;
-}
-
-window#waybar.solo #window {
-}
-
-window#waybar.firefox-nightly #window {
-}
-
-#custom-files,
-#custom-browser,
-#custom-mail,
-#custom-editor,
-#custom-terminal {
-  background: @peach;
-  color: @black2;
-}
-
-#custom-files:hover,
-#custom-browser:hover,
-#custom-mail:hover,
-#custom-editor:hover,
-#custom-terminal:hover {
-  color: @blue;
-}
-
-#mode {
-  color: @black2;
-  background: transparent;
-  font-style: italic;
-}
-
-/**
- * CENTER
- */
-
-#clock {
-  background: @magenta;
-  color: @black2;
-  padding: 0 16px;
-}
-
-/**
- * RIGHT
- */
-
-#tray {
-  padding: 0 6px 0 16px;
-}
-
-#custom-tmpmail {
-  padding-left: 4px;
-  padding-right: 16px;
-}
-
-#custom-wttr {
-  background: @magenta;
-  color: @black2;
-  padding: 0 16px;
-}
-
-#idle_inhibitor {
-  padding-right: 16px;
-  margin-right: 0;
-  font-size: 15px;
-}
-
-#pulseaudio {
-  background: @peach;
-  color: @black2;
-}
-
+/nix/store/3rszgvvx6y1scvidnkam2f0hwgsf6mij-home-manager-files/.config/waybar/style.css
