Neovim fixes and finalized waybar-preview script.

--- a/config/firefox/tridactyl/themes/catppuccin.css
+++ b/config/firefox/tridactyl/themes/catppuccin.css
@@ -1,5 +1,5 @@
 /**
- * Tridactyl theme based on the Catpuccin color palette.
+ * Tridactyl theme based on the Catppuccin color palette.
  *
  * Author: Daniel Nordstrom <d@mrnordstrom.com>
  * Updated: 
