chore(wm): tidying up sway config and changing font to pragmatapro mono

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -49,7 +49,7 @@
 
 * {
   font-weight: bold;
-  font-family: "InputMonoCompressed Nerd Font", monospace;
+  font-family: "PragmataPro Mono Liga", serif;
   font-size: 12px;
 }
 
