feat(sound): adding pwctl script for pipewire control

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -225,7 +225,8 @@ box > box > widget > label {
   color: @black2;
 }
 
-#pulseaudio {
+#pulseaudio,
+#custom-pipewire {
   background: @peach;
   color: @black2;
 }
