--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -49,7 +49,7 @@
 
 * {
   font-weight: bold;
-  font-family: "PragmataPro Mono Liga", serif;
+  font-family: "unicons-line", "PragmataPro Mono Liga", serif;
   font-size: 13px;
 }
 
@@ -100,7 +100,7 @@ box > box > widget > label {
 
 #workspaces button {
   margin: 0;
-  padding: 0 10px;
+  padding: 0 16px;
   box-shadow: none;
   color: @gray2;
   border-top: 4px solid @black2;
@@ -108,11 +108,11 @@ box > box > widget > label {
   border-right: none;
   border-left: none;
   border-radius: 0;
+  min-width: 0;
 }
 
 #workspaces button:hover,
 #workspaces button.urgent:hover {
-  background: @black3;
   border-bottom: 3px solid @peach;
   border-top-color: @black3;
   color: @peach;
