chore(cleanup): cleaning up configs

--- a/config/firefox/userContent.css
+++ b/config/firefox/userContent.css
@@ -7,7 +7,7 @@
  * Issue: https://github.com/tridactyl/tridactyl/issues/2510
  * Colors: https://github.com/catppuccin
  *
- * Requires toolkit.legacyUserProfileCustomizations.stylesheets to be true (defaults to false).
+ * Requires `toolkit.legacyUserProfileCustomizations.stylesheets` to be true (defaults to false).
  *
  * Author: Daniel Nordstrom <d@mrnordstrom.com>
  * Repository: https://github.com/dnordstrom/dotfiles
